@@ -11,6 +11,7 @@
 #                                                                                          #
 ############################################################################################
 
+[166] --> Fix - Vehicle Immunities. (By Demonid)
 [165] --> Implement [Strand of the Ancients] Warnings system. (By  Vincent-Michael)
 [164] --> Implement Raise ally. (TEST By Runico)
 [163] --> Updatel duel reset and fix hp pets at dismount.
